pp2/samples/tested/inheritance.decaf.test

*** Error line 31.
  Cow betsy;
      ^^^^^
*** syntax error

